# Lab_2

./: CMakeLists.txt  functions.cpp  functions.h  height_2026.txt  main.cpp  obsA_2026.txt  obsB_2026.txt  speed_2026.txt  weight_2026.txt
